igt@gem_ctx_persistence@close-replace-race - incomplete - GEM_BUG_ON(i915_vma_is_closed(vma))
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8803/shard-glk7/igt@gem_ctx_persistence@close-replace-race.html
<0> [495.766211] gem_ctx_-4825 0.... 490736293us : __intel_context_active: 0000:00:02.0 rcs0: context:66d active
<0> [495.766365] gem_ctx_-4825 0.... 490736316us : intel_timeline_pin: 0000:00:02.0 timeline:66d using HWSP offset:fffdd0c0
<0> [495.766482] gem_ctx_-4825 0.... 490736394us : __intel_context_do_pin: 0000:00:02.0 rcs0: context:66d pin ring:{start:0080a000, head:0000, tail:0000}
<0> [495.766612] gem_ctx_-4825 0.... 490736677us : eb_lookup_vmas: eb_add_vma:553 GEM_BUG_ON(i915_vma_is_closed(vma))
<0> [495.766657] ---------------------------------
<4> [495.771534] ------------[ cut here ]------------
<2> [495.771539] kernel BUG at drivers/gpu/drm/i915/gem/i915_gem_execbuffer.c:553!
<4> [495.771581] invalid opcode: 0000 [#1] PREEMPT SMP PTI
<4> [495.771592] CPU: 0 PID: 4825 Comm: gem_ctx_persist Tainted: G W 5.8.0-rc7-CI-CI_DRM_8803+ #1
<4> [495.771607] Hardware name: Intel Corporation NUC7CJYH/NUC7JYB, BIOS JYGLKCPX.86A.0027.2018.0125.1347 01/25/2018
<4> [495.771734] RIP: 0010:eb_lookup_vmas+0x852/0xe20 [i915]
<4> [495.771744] Code: 00 48 c7 c2 c8 33 3f a0 48 c7 c7 c7 e2 2a a0 e8 d4 9b ef e0 bf 01 00 00 00 e8 ea 6d ef e0 31 f6 bf 09 00 00 00 e8 ce 2b e0 e0 <0f> 0b 4d 89 fd 89 e8 4b 8d 1c b6 48 c1 e3 04 49 8b 55 20 48 c7 04
<4> [495.771770] RSP: 0018:ffffc9000054ba88 EFLAGS: 00010246
<4> [495.771779] RAX: 0000000000000200 RBX: ffff88826cce0c40 RCX: 0000000000000000
<4> [495.771790] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000009
<4> [495.771801] RBP: ffff888185713cc0 R08: 0000000000000000 R09: 0000000000000000
<4> [495.771812] R10: 0000000000000001 R11: 0000000000000000 R12: ffff88825b200108
<4> [495.771823] R13: ffff888270e4c408 R14: 0000000000000000 R15: ffffc9000054bb78
<4> [495.771835] FS: 00007f4755b79e40(0000) GS:ffff888278000000(0000) knlGS:0000000000000000
<4> [495.771847] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [495.771857] CR2: 00007f47559ea040 CR3: 000000025c9c8000 CR4: 0000000000340ef0
<4> [495.771867] Call Trace:
<4> [495.771953] i915_gem_do_execbuffer+0x9d8/0x2ea0 [i915]
<4> [495.772038] ? i915_gem_execbuffer2_ioctl+0xc6/0x4e0 [i915]
<4> [495.772058] ? lock_acquire+0xb5/0x3c0
<4> [495.772067] ? __might_fault+0x39/0x90
<4> [495.772076] ? find_held_lock+0x2d/0x90
<4> [495.772085] ? __might_fault+0x39/0x90
<4> [495.772166] i915_gem_execbuffer2_ioctl+0x116/0x4e0 [i915]
<4> [495.772249] ? i915_gem_execbuffer_ioctl+0x300/0x300 [i915]
<4> [495.772262] drm_ioctl_kernel+0xb0/0xf0
<4> [495.772272] drm_ioctl+0x305/0x3c0
<4> [495.772352] ? i915_gem_execbuffer_ioctl+0x300/0x300 [i915]
<4> [495.772368] ksys_ioctl+0x7b/0x90
<4> [495.772377] __x64_sys_ioctl+0x11/0x20
<4> [495.772386] do_syscall_64+0x56/0xe0
<4> [495.772395] entry_SYSCALL_64_after_hwframe+0x44/0xa9
<4> [495.772405] RIP: 0033:0x7f4754ff25d7
<4> [495.772413] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [495.772439] RSP: 002b:00007ffff8858f28 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [495.772451] RAX: ffffffffffffffda RBX: 00007ffff8859390 RCX: 00007f4754ff25d7
<4> [495.772462] RDX: 00005600a2ce6348 RSI: 0000000040406469 RDI: 0000000000000006
<4> [495.772473] RBP: 00005600a2ce6348 R08: 00000000000d7160 R09: 00000000000001e8
<4> [495.772484] R10: 0000000000000056 R11: 0000000000000246 R12: 0000000040406469
<4> [495.772495] R13: 0000000000000006 R14: 000000000000000b R15: 0000000000000000
<4> [495.772510] Modules linked in: i2c_dev vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio mei_hdcp i915 x86_pkg_temp_thermal coretemp crct10dif_pclmul btusb btrtl crc32_pclmul btbcm btintel ghash_clmulni_intel bluetooth snd_hda_intel snd_intel_dspcfg snd_hda_codec ecdh_generic ecc snd_hwdep snd_hda_core r8169 realtek mei_me snd_pcm mei prime_numbers i2c_hid pinctrl_geminilake pinctrl_intel
<4> [495.772821] ---[ end trace 23925c41fb0c716b ]---